--- a/commons/templates/index.html
+++ b/commons/templates/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <title>Yo</title>
+        <link rel="shortcut icon" href="http://civiccommons.org/wp-content/uploads/2010/09/fav1.png"/>
+        <title>Civic Commons App Catalog</title>
     </head>
     <body>
+        <h1>Welcome to the Civic Commons App Catalog. Please choose one of the applications below:</h1>
 {% if latest_app_list %}
     <ul>
     {% for app in latest_app_list %}
