adding comment/documentation on how to update css and js

--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -4,6 +4,8 @@
         <meta charset=utf-8 />
         <title>{% block title %}{% endblock %}</title> 
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
+        <!-- IMPORTANT Remember to update the files, run : -->
+        <!--  ./manage.py collectstatic  -->
     </head>
     <body>
         <header>
