Added new route and template for app detail view

--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Site title etc.</h1>
+            <h1>Civic Commons App Catalog</h1>
             <nav>
                 <h2>Main navigation</h2>
                 <ul>
@@ -17,7 +17,7 @@
                 </ul>
             </nav>
         </header>
-        <section id="wrapper">i
+        <section id="wrapper">
         {% block content %}{% endblock %}
         </section>
     </body>
