Fixed typeo in basic template

--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Civic Commons App Catalog</h1>
+            <h1>Civic Commons App Catalog MVP</h1>
             <nav>
                 <h2>Main navigation</h2>
                 <ul>
