tying it all together

--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -7,7 +7,7 @@
     <h2>Jurisdictions which have deployed:</h2>
     <ul>
         {% for jx in jurisdictions %}
-        <li>{{ jx.jurisdiction }}</a></li>
+        <li><a href="/j/{{jx.id}}">{{ jx.jurisdiction }}</a></li>
         {% endfor %}
     </ul>
     <h2>Google Search results for {{ app.name }}:</h2>
