--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -13,7 +13,10 @@
             <nav>
                 <h2>Main navigation</h2>
                 <ul>
-                    <li><a href="/">Nav item</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/apps/">Apps</a></li>
+                    <li><a href="/j/">Jurisdictions</a></li>
+                    <li><a href="/dep/">Deploymants</a></li>
                 </ul>
             </nav>
         </header>
