--- a/commons_project/commons_core/templates/j_detail.html
+++ b/commons_project/commons_core/templates/j_detail.html
@@ -3,6 +3,10 @@
 {%block title%}Jurisdiction{%endblock%}
 
 {% block content %}
-<h1>{% jurisdiction.name %}</h1>
-<p>{% jurisdiction.description %}
+<h1>{{ jurisdiction.name }}</h1>
+<p>{{ jurisdiction.description }}
+<h2>Applications deployed in {{jurisdiction.name}}</h2>
+{% for deployment in jurisdiction.deployment_set.all %}
+<p><a href="/dep/{{deployment.id}}/">{{deployment.name}}</a></p>
+{% endfor %}
 {% endblock %}
