Tying together the deployments, apps, and jurisdictions.

--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -6,8 +6,8 @@
     <h3>{{app.description}}</h3>
     <h2>Jurisdictions which have deployed:</h2>
     <ul>
-        {% for jx in jurisdictions %}
-        <li><a href="/j/{{jx.id}}">{{ jx.jurisdiction }}</a></li>
+        {% for dep in app.deployment_set.all %}
+        <li><a href="/dep/{{dep.id}}">{{ dep.jurisdiction.name }}</a></li>
         {% endfor %}
     </ul>
     <h2>Google Search results for {{ app.name }}:</h2>
