--- a/commons_project/commons_core/templates/depdetail.html
+++ b/commons_project/commons_core/templates/depdetail.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1>About the {{ dep.name }}:</h1>
     <h3>{{dep.description}}</h3>
-    <h2>This deployment was for: {{dep.app}} Application</h2>
-    <h2>It was deployed in the following jurisdiction: {{ dep.jurisdiction }}</h2>
+    <h2>This deployment was of <a href="/apps/{{dep.app.id}}/">{{dep.app}} Application</a></h2>
+    <h2>It was deployed in: <a href="/j/{{dep.jurisdiction.id}}/">{{ dep.jurisdiction }}</a></h2>
     </ul>
 {% endblock %}
