Minor look and feel improvement.

--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -1,4 +1,10 @@
-body {
+html {
     background-color: #E1CFAC;
-    margin: 1em;
+}
+
+body {
+    background-color: #FFF;
+    margin: 2em;
+    padding: 2em;
+    border: 1px solid #CAB39A
     }
