--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -16,7 +16,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/apps/">Apps</a></li>
                     <li><a href="/j/">Jurisdictions</a></li>
-                    <li><a href="/dep/">Deploymants</a></li>
+                    <li><a href="/dep/">Deployments</a></li>
                 </ul>
             </nav>
         </header>
