--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -1,10 +1,75 @@
-html {
-    background-color: #E1CFAC;
+body {
+    background-color: #F4EFDD;
+    margin: 0px;
+    font-family: 'Cabin','Gill Sans','Gill Sans MT','Helvetica Neue','Helvetica',Arial,sans-serif;
 }
 
-body {
+#main {
     background-color: #FFF;
-    margin: 2em;
+    margin: 0 2em;
     padding: 2em;
-    border: 1px solid #CAB39A
+    border: 1px solid #CAB39A;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    -moz-box-shadow: 0 0 3px #999;
+    -webkit-box-shadow: 0 0 3px #999;
+    box-shadow: 0 0 3px #999;
+    clear: both;
     }
+
+header {
+    background-color: #000;
+    height: 40px;
+    border-bottom: 1px solid white;
+    color: white;
+    padding: 0 5px;
+}
+
+header a {
+    color: white;
+}
+#logo {
+    margin: 0px;
+    display: block;
+    float: left;
+    font-size: 1em;
+    color: white;
+}
+
+#user {
+    display: block;
+    float: right;
+    margin: 0px;
+}
+
+#user li {
+    display: inline-block;
+}
+
+nav {
+    clear: both;
+}
+
+nav ul {
+    padding: 5px 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    float: none;
+    list-style-type: none;
+    padding: 0.5em;
+}
+
+nav ul li a {
+    padding: 0.5em;
+    background-color: white;
+    border: 1px solid #CAB39A;
+}
+
+div {
+    border: 1px solid red;
+}
+
