--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Cabin:regular,regularitalic,bold,bolditalic' rel='stylesheet' type='text/css'>
+
         <meta charset=utf-8 />
         <title>{% block title %}{% endblock %}</title> 
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
@@ -8,19 +10,9 @@
         <!--  ./manage.py collectstatic  -->
     </head>
     <body>
-        <header>
-            <h1>Civic Commons App Catalog MVP</h1>
-            <nav>
-                <h2>Main navigation</h2>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/apps/">Apps</a></li>
-                    <li><a href="/j/">Jurisdictions</a></li>
-                    <li><a href="/dep/">Deployments</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section id="wrapper">
+        {% include "topbar.html" %}
+        {% include "nav.html" %}
+        <section id="main">
         {% block content %}{% endblock %}
         </section>
     </body>
