--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -1,4 +1,146 @@
 body {
-    background-color: #E1CFAC;
-    margin: 1em;
+    margin: 0 auto;
+    width: 960px;
+    font-family: helvetica, arial, sans-serif;
+    border: 1px solid #ddd;
+    padding: 0;
     }
+
+header {
+ 
+    padding: .5em;
+    margin: 0em;
+
+}
+
+#utility {
+
+    vertical-align: bottom;
+
+}
+.nav-bar ul {
+
+    padding 0;
+-webkit-margin-before: 0em;
+-webkit-margin-after: 0em;
+-webkit-margin-start: 0px;
+-webkit-margin-end: 0px;
+-webkit-padding-start: 0px;
+-webkit-padding-end: 0px;
+ margin: 0em auto;
+ border:1px solid blue;
+    height: 40px;
+    margin: 15px 0px 0px 0px;
+}
+
+#ndav {
+    display: block;
+    clear:both;
+
+     border: 1px solid #444;
+}
+#nadv ldi {
+    vertical-align: middle;
+    display:inline;
+    list-style:none;
+    border-right: 1px black;
+    padding: .2em;
+    text-align: right;
+    border: 1px solid #55ffff;
+}
+#ndav li span{
+    text-align: right;
+    padding-right:0.2em;
+}
+.nav-item{
+    border-right: 1px solid red;
+    padding: .2em .1em .2em .1em;
+
+    height: 40px;
+}
+
+.applist {
+
+    display:inline-block;
+    list-style:none;
+
+}
+
+#content-wrapper{
+    border: 1px solid black;
+
+    margin: .2em 0em 0em 0em;
+
+}
+
+#top-alert {
+    height:50px;
+    margin: 0em;
+    padding: 0em;
+    background-color: #eee;
+
+}
+
+.left-col{
+    border: 1px solid orange;
+    margin: 0em 1em; .5em 1em;
+    padding: .1em 1em .1em 1em;
+}
+.right-col{
+    border: 1px solid brown;
+    margin: 0em 1em; .5em 1em;
+    padding: .1em 1em .1em 1em;
+    
+}
+.right-col p {
+    margin: 1em;
+    font-size: 100%;
+
+}
+
+h2{
+    margin: 1em;
+    font-size: 140%;
+
+}
+
+.strip {
+    border: 1px solid black;   
+    margin: 1em;
+    height: 75px;
+
+}
+strip-item {
+    display: inline-block;
+     border: 1px solid black;   
+}
+strip-item img {
+    display:block;
+
+}
+
+.media-gallery-1col{
+    height: 200px;
+    background-color: pink;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.footer {
+    margin: 0em 0em .2em 0em;
+    padding: .4em;
+    text-align: center;
+
+}
+
+
