--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -13,6 +13,30 @@ header {
 
 }
 
+h1 {
+/*    margin: .2em .2em .2em .3em; */
+    font-size: 180%;
+}
+
+h2 {
+    margin: .2em .3em .3em .6em;
+    font-size: 140%;
+    display: inline-block;
+
+}
+
+a:link  {
+     
+    text-decoration:none; 
+}
+a:visited           { color:black; text-decoration:none; }
+a:hover             { color:red; text-decoration:underline; }
+a:active            { color:red; text-decoration:underline; }
+
+h2 a:visited {
+    text-decoration: none;
+}
+
 #utility {
 
     vertical-align: bottom;
@@ -99,11 +123,6 @@ header {
 
 }
 
-h2{
-    margin: 1em;
-    font-size: 140%;
-
-}
 
 .category-strip {
     border: 1px solid black;   
