--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -10,6 +10,12 @@
         <li><a href="/dep/{{dep.id}}">{{ dep.jurisdiction.name }}</a></li>
         {% endfor %}
     </ul>
+    <h2>Features of the {{ app.name }}:</h2>
+     <ul>
+        {% for feat in app.features.all %}
+        <li>{{ feat.feature }}</li>
+        {% endfor %}
+    </ul>
     <h2>Google Search results for {{ app.name }}:</h2>
     <ul>
         {% for result in results %}
