--- a/commons_project/templates/nav.html
+++ b/commons_project/templates/nav.html
@@ -2,11 +2,11 @@
             <div class="yui3-u-1">
                 <div class="nav-bar">
                     <ul class="yui3-g">
-                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/">Home</a></div></li>
-                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
-                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/j/">Cities</a></div></li>
-                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/users/">People</a></div></li>
-                        <li class="yui3-u-7-12"><div class="nav-item"><input type="search"/><input type="button" value="search"/></div></li>
+                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/">Home</a></div></li>
+                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
+                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/j/">Cities</a></div></li>
+                        <li class="yui3-u-1-12 redd"><a href="/users/">People</a></li>
+                        <li class="yui3-u" id="rest-of-bar"><div class="nav-item" id="search-nav"><input type="search"/><input type="button" value="search"/></div></li>
                     </ul>
                 </div>
             </div>
