--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -5,7 +5,11 @@
 {% block content %}
     <div class="yui3-g"><!-- grid for main content area -->
             <div class="yui3-u-1">
-                <div id="top-alert"></div>
+                <div id="top-alert">
+                    <h2>
+                    <a href="/">log-in</a> to get access to great case studies, vendors, experts and more!
+                    </h2>
+                </div>
             </div>
         
             <div class="yui3-u-1">
@@ -86,7 +90,15 @@
                             {% if latest_app_list %}
                                 <ul class="app-list">
                                     {% for app in latest_app_list %}
-                                        <li><a href="/apps/{{ app.id }}/">{{ app.name }}</a></li>
+                                        <li class="listed-app-name"><!--<img title="app-icon" src="{{ STATIC_URL }}/img/cog.png"/>-->
+                                        <h3><a href="/apps/{{ app.id }}/">{{ app.name }}</a></h3>
+                                         
+                                         <!-- -->
+                                         <div class="star-ratings">
+                                             <div id="star-rating-{{ app.id }}"></div>
+                                         </div>    
+                                        <a href="/apps/{{ app.id }}/comments"><img title="comments" src="{{ STATIC_URL }}/img/comments.png"/><span class="comments-link">read comments</span></a>
+                                        </li>
                                     {% endfor %}
                                 </ul>
                              {% else %}
@@ -108,4 +120,29 @@
                 </div><!-- end right col content -->
             </div> <!-- end grid for bottom two column contents new & hot and what's happening -->
     </div> <!-- end main content area -->
+    
+    <script type="text/javascript">
+    	$(function() {
+    	    
+    	    
+    	    
+    	    {% if latest_app_list %}
+    	         {% for app in latest_app_list %}
+    	            $('#star-rating-{{ app.id }}').raty({
+                        path: "{{STATIC_URL}}/img/",
+                        start: Math.floor(Math.random()*6)
+                        });
+                 {% endfor %}
+             {% endif %}
+             
+              {% if user.is_authenticated %}
+    	         $('#top-alert').hide();
+    	     {% else %}
+        	     $('#top-alert').slideDown('slow');
+    	     {% endif %}
+             
+             
+    	});
+    </script>
+    
     {% endblock %}
