--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -13,9 +13,10 @@
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
         
-        <style type="text/css"> 
-        
-        </style> 
+    
+		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.raty.min.js"></script>    
+    
         <!-- IMPORTANT Remember to update the files, run : -->
         <!--  ./manage.py collectstatic  -->
       
