--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -62,17 +62,16 @@ h2 a:visited {
     /*background-color: #eee;
      border: 1px solid #444;*/
      line-height:3em; 
+     margin-bottom: .4em;
+     
     
 
 }
 
-.redd {
-     border-right: 1px solid #fff;
-}
 .nav-bar ul li {
     display: inline-block;
     text-align:center;
-    background-color: #eee;
+    background-color: #ddd;
 }
 
 
@@ -80,7 +79,7 @@ h2 a:visited {
  /*   height: 3em; */
     margin: 0 auto;
     padding: .8em .9em;
-    color: #fff;
+    color: #888;
 
     width:100%;
 }
@@ -91,7 +90,8 @@ h2 a:visited {
 }
 .nav-bar ul li:hover {
     text-decoration: none;
-    background-color:#aaa;
+    background-color:#eee;
+    color:#aaa;
 }
 
 #rest-of-bar{
@@ -106,15 +106,59 @@ h2 a:visited {
 }
 
 #rest-of-bar:hover {
-    background-color:#eee;
+    background-color:#ddd;
 
 }
 
-#search-nav input {
-    width:8em;
-    height:2.4em;
+#search-field {
 
+    color:#000;
+    width:300px;
+     outline:none;
+    resize:none;
+	height:1.2em;
+	padding: 10px 15px 5px 10px;
+	 -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+	
 }
+
+.button {
+   border-top: 1px solid #aaa;
+   background: #777;
+/*   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7)); */
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   padding: .5em .5em;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   -webkit-box-shadow: #ddd 0 1px 0;
+   -moz-box-shadow: #ddd 0 1px 0;
+   box-shadow: #ddd 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: .8em;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.button:hover {
+   border-top-color: #bbb;
+   background: #777;
+   color: #ccc;
+   }
+.button:active {
+   border-top-color: #666;
+   border-left-color: #666;
+   border-bottom-color: #777;
+   border-right-color: #777;
+   background: #777;
+    -webkit-box-shadow: rgba(0,0,0,1) 0 -1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 -1px 0;
+   box-shadow: rgba(0,0,0,1) 0 -1px 0;
+   }
+
 
 #nadv ldi  {
     vertical-align: middle;
