--- a/commons_project/templates/nav.html
+++ b/commons_project/templates/nav.html
@@ -6,7 +6,12 @@
                         <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
                         <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/j/">Cities</a></div></li>
                         <li class="yui3-u-1-12 redd"><a href="/users/">People</a></li>
-                        <li class="yui3-u" id="rest-of-bar"><div class="nav-item" id="search-nav"><input type="search"/><input type="button" value="search"/></div></li>
+                        <li class="yui3-u" id="rest-of-bar">
+                            <div class="nav-item" id="search-nav">
+                                <input id="search-field" type="input"/>
+                                <input class="button" type="submit" value="search"/>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
