--- a/commons_project/commons_core/templates/appindex.html
+++ b/commons_project/commons_core/templates/appindex.html
@@ -3,7 +3,78 @@
 {%block title%}Civic Commons App Catalog{%endblock%}
 
 {% block content %}
-        <h1>Application Catalog List. Please choose one of the applications below:</h1>
+
+ <div class="yui3-g"><!-- grid for main content area -->
+            <div class="yui3-u-1">
+                <div id="top-alert">
+                    <h2>
+                    <a href="/">log-in</a> to get access to great case studies, vendors, experts and more!
+                    </h2>
+                </div>
+            </div> <!-- top alert -->
+        
+            <div class="yui3-u-1">
+                <h1>Categorical Information Systems</h1>
+            </div> <!-- end main title -->
+            
+            <div class="yui3-g"><!-- grid for two top columns content -->
+              <div class="yui3-u-1-2">
+                <div class="left-col yui3-g">
+                    <div class="yui3-u-1">  
+
+                      <div class="media-gallery-1col"></div>
+                      <p>this is explaining the app</p>
+                    </div>
+                </div>
+            </div><!-- left col content -->
+              <div class="yui3-u-1-2">
+                 <div class="right-col yui3-g">
+                   <div class="yui3-u-1">
+                    <p> hi</p>
+                </div>   
+            </div>
+        </div><!-- right col content -->
+            </div> <!-- end grid for top two column contents -->
+
+            <div class="yui3-g">
+                <div class="yui3-u-1-4">
+                    
+                </div> <!-- end filters -->
+                <div class="yui3-u-1-4">
+                    <div class="sort-bar"></div>
+                     <div class="yui3-u-1">                          
+                           {% if app_list %}
+                                <ul class="app-list">
+                                     {% for app in app_list %}
+                                        <li class="listed-app-name"><!--<img title="app-icon" src="{{ STATIC_URL }}/img/cog.png"/>-->
+                                        <h3><a href="/apps/{{ app.id }}/">{{ app.name }}</a></h3>
+                                         
+                                         <!-- 
+                                         <div class="star-ratings">
+                                             <div id="star-rating-{{ app.id }}"></div>
+                                         </div>  -->  
+                                        <a href="/apps/{{ app.id }}/comments"><img title="comments" src="{{ STATIC_URL }}/img/comments.png"/><span class="comments-link">read comments</span></a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                             {% else %}
+                                <p>No apps are available.</p>
+                             {% endif %}
+
+                        </div> <!-- end list div -->
+                </div>  <!-- end list of apps in this cat -->
+            
+            </div>
+            
+
+              
+
+
+</div> <!-- end div for main content area -->
+
+<!-- +++++++++++++++++++++++++++++++++++++++++++++++  -->
+
+       
 {% if app_list %}
     <ul>
     {% for app in app_list %}
