basic cleanup of the category bar

--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -57,17 +57,20 @@
                 </div>
             </div> <!-- category browser head -->
             
-            <ul class="yui3-g category-strip"> 
+            <div class="yui3-g">
+            <div class="yui3-u-1 centered">
+            <ul class="yui3-g category-strip">
+             
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Health</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Transit</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Governance</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Police</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Fire</a></div></li>
             
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"></div><img src="" />blargh</li>
-            
-            </ul> <!-- grid for category browser -->
-
+            </ul> 
+            </div>
+            </div><!-- grid for category browser -->
 
             <div class="yui3-g"><!-- grid for two top columns headings -->
                 <div class="yui3-u-1-2">
@@ -112,7 +115,7 @@
                     <div class="right-col yui3-g">
                         <div class="yui3-u-1">
                             <ul class="recent-activity">
-                                <li></li>
+                                <li>not much happening, apparently!</li>
                                 <li></li>
                             </ul>
                         </div>   
